# wordsToNumber

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  app.cpp  wordsToNumber.cpp  wordsToNumber.h
src/test/: README.md
